--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,7 +33,7 @@ html
     block content
 
     footer
-      p This is the footer.
+      p ParametricRC 2014
 
     block scripts
       //- Only load bundle.js on pages where it's needed
