--- a/source/stylesheets/style.less
+++ b/source/stylesheets/style.less
@@ -1,11 +1,10 @@
 // ## Load fonts
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400);
 
 @import "bootstrap/bootstrap.less";
 
 // ## Nice icons
 @import "font-awesome/font-awesome.less";
-//url("http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
 
 
 // ## Variables
@@ -14,7 +13,7 @@
 @footer-text-color: #777;
 
 // ## Bootstrap variables
-@font-family-base: 'Open Sans';
+@font-family-base: 'Source Sans Pro';
 @font-size-base: 16px;
 
 /* Theme:
@@ -45,14 +44,14 @@ http://mudcu.be/sphere/# analogous websmart
 }
 
 // ## Define font variables
-@font-header: 'Open Sans', sans-serif;
+@font-header: 'Source Sans Pro', sans-serif;
 .font-header-light (@font-size: 2em) {
 	font: 300 @font-size @font-header; // font-size and font-family MUST be defined
 }
 .font-header-normal (@font-size: 2em) {
 	font: 400 @font-size @font-header;
 }
-@font-body:  'Open Sans', sans-serif;
+@font-body:  'Source Sans Pro', sans-serif;
 .font-body-light (@font-size: 1em) {
 	font: 300 @font-size @font-body;
 }
